# pwrank

./: .gitignore  ANALYSIS.md  README.md  flake.nix
backend/: pyproject.toml
backend/webrankit/: __init__.py  app.py  cli.py  config.py  constants.py  database.py  extensions.py  extract.py  logging_config.py  pairwise.py
backend/webrankit/model/: __init__.py  base.py  comparison.py  user.py
backend/webrankit/resource/: __init__.py  auth.py  compare.py  item.py  ranking.py  statistics.py  user.py
docs/: gwern_resorter.md
frontend/: bun.lockb  package-lock.json  package.json
frontend/npm_global/: node-packages.nix
frontend/public/: index.html
frontend/src/: App.vue  constants.js  main.js  rest.js
frontend/src/composables/: useAsyncAction.js  useFormValidation.js  useModal.js  useNotification.js  useRankingData.js
frontend/src/router/: index.js
frontend/src/utils/: debounce.js  validation.js
frontend/src/views/: ComparePage.vue  LoginPage.vue  RankingPage.vue  RankingsPage.vue
ref/: nshell  shell.nix
