[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "webrankit"
version = "0.1.0"
description = ""
authors = [{name = "Sinity", email = "ezo.dev@gmail.com"}]
requires-python = ">=3.11,<3.13"
dependencies = [
    "requests>=2.32.3",
    "charset-normalizer>=3.3,<3.4",
    "Pillow>=11.0.0",
    "Flask>=2.3.3",
    "Flask-Cors>=4.0.1",
    "peewee>=3.17.5",
    "Flask-RESTful>=0.3.10",
    "Flask-JWT-Extended>=4.6.0",
    "passlib>=1.7.4",
    "beautifulsoup4>=4.12.3",
    "click>=8.1.7,<8.2",
    "MarkupSafe<3.0.3",
]

[project.optional-dependencies]
dev = [
    "black>=24.10.0",
    "python-lsp-server>=1.11.0",
    "pylsp-mypy>=0.6.8",
    "epc>=0.0.5",
    "isort>=5.13.2",
    "python-lsp-black>=2.0.0",
    "python-lsp-isort>=0.2.0",
]

[project.scripts]
backend = "webrankit.cli:main"

[tool.uv]
dev-dependencies = [
    "black>=24.10.0",
    "python-lsp-server>=1.11.0",
    "pylsp-mypy>=0.6.8",
    "epc>=0.0.5",
    "isort>=5.13.2",
    "python-lsp-black>=2.0.0",
    "python-lsp-isort>=0.2.0",
]
